test: 자료형 변경 및 조회 response 객체 추가